# cantica-api

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  atlas.hcl  docker-compose.yaml  pyproject.toml
docs/: ROADMAP.md  api-manual.md  auth-tokens-api-key-vs-jwt.md  blob-store-custom-vs-git-libraries.md  concepts.md  prompt-metadata-schema.json
migrations/: 20260523203331_initial_schema.sql  20260524092718_add_community_tables.sql  20260524120000_add_webhooks.sql  20260524193852_add_namespace_access_control.sql  20260525142834_add_prompt_source.sql  20260525143626_add_federation_peers.sql  20260525154346_add_federation_protocol.sql  20260527000000_add_users.sql  20260527130000_add_user_invites.sql  20260714125307_remote_auth.sql  atlas.sum
migrations/postgres/: 20260523000000_initial_schema.sql  20260524000000_add_community_tables.sql  20260524120000_add_webhooks.sql
src/cantica/: __init__.py  cli.py  config.py  database.py  main.py  shim.py
src/cantica/api/: __init__.py  deps.py
src/cantica/api/v1/: __init__.py  router.py
src/cantica/api/v1/endpoints/: __init__.py  admin.py  auth.py  branches.py  collections.py  comments.py  diff.py  federate.py  federation.py  forks.py  hooks.py  invites.py  keyauth.py  namespaces.py  prompts.py  push.py  render.py  resolve.py  sessions.py  stars.py  tags.py  upload.py  versions.py
src/cantica/core/: __init__.py  auth_config.py  auth_gate.py  auth_provider.py  certificates.py  federation_crypto.py  federation_policy.py  jwt_utils.py  logger.py  mailer.py  resolver.py  security.py  security_shim.py
src/cantica/mcp/: server.py
src/cantica/models/: __init__.py  prompt.py  user.py
src/cantica/orm/: __init__.py  base.py  tables.py
src/cantica/schemas/: __init__.py  admin.py  auth.py  branches.py  collections.py  comments.py  diff.py  federate.py  federation.py  forks.py  hooks.py  merge.py  namespaces.py  prompts.py  render.py  resolve.py  sessions.py  stars.py  tags.py  versions.py
src/cantica/services/: __init__.py  blob_store.py  lock_file.py  template_engine.py  version_store.py
tests/: conftest.py  test_auth_config.py  test_auth_provider.py  test_blob_store.py  test_certificates.py  test_cli.py  test_community.py  test_coverage_gaps.py  test_database.py  test_federation_crypto.py  test_federation_store.py  test_lock_file.py  test_mcp.py  test_models.py  test_resolver.py  test_shim.py  test_template_engine.py  test_user_model.py  test_version_store.py
tests/api/: conftest.py  test_access_control.py  test_admin.py  test_auth.py  test_auth_enabled.py  test_branches.py  test_collections.py  test_comments.py  test_diff.py  test_federate.py  test_federation.py  test_forks.py  test_hooks.py  test_keyauth.py  test_keyauth_coverage.py  test_merge_rollback.py  test_namespaces.py  test_prompts.py  test_proprietary_403.py  test_push.py  test_render.py  test_resolve.py  test_search.py  test_security_shim.py  test_sessions.py  test_stars.py  test_tags.py  test_upload.py  test_versions.py
tools/: atlas_loader.py
